--- a/CSS.css
+++ b/CSS.css
@@ -226,6 +226,98 @@ div#BaseObtention {
   max-width: 1140px;
 }
 
+.obtentionResultsContainer {
+  background-color: #999;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 5px;
+  wrap: no-wrap;
+  font-size: 12px;
+  text-align: center;
+  display: block;
+  justify-content: center;
+    margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
+
+.resultHeader1 {
+  background-color: #252525;
+  border-radius: 5px;
+  color: #fff;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 2.5px;
+}
+
+.resultHeader2 {
+  margin-top: 2.5px;
+  background-color: #252525;
+  border-radius: 5px;
+  color: #fff;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.resultSubheader {
+  background-color: #385f71;
+  border-radius: 5px;
+  margin-top: 5px;
+  color: #fff;
+  padding: 5px;
+  font-weight: bold;
+}
+
+.resultSubheader1 {
+  background-color: #252525;
+  border-radius: 5px;
+  margin-top: 5px;
+  color: #fff;
+  padding: 5px;
+}
+
+.resultBody {
+  border: 1px solid gray;
+  background: #fff;
+  border-radius: 5px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  margin-bottom: 5px;
+  width: 150px;
+  display: inline-block;
+  margin-top: 5px;
+  height: 175px;
+  padding: 5px;
+}
+
+.obtentionResultTitle {
+  font-weight: bold;
+}
+
+.obtentionResultImage {
+  width: auto;
+  padding: 5px;
+  max-height: 90px;
+}
+
+.obtentionResultBreeding {
+  border: 1px solid gray;
+  background: #fff;
+  border-radius: 5px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  margin-bottom: 5px;
+  width: 100px;
+  display: inline-block;
+  margin-top: 5px;
+  height: 40px;
+  padding: 5px;
+}
+
 div#BaseCategory {
   margin-left: 10%;
   margin-right: 10%;
